@@ -2,6 +2,11 @@
 
 ### Next release
 
+## 1.18.2
+
+* 📅 Release Date: ~September 2021
+* All changes: https://github.com/eclipse-m2e/m2e-core/compare/1.18.1...1.18.2
+
 #### the m2e-pde editor now supports adding more than one dependency per target location:
 
 ![grafik](https://user-images.githubusercontent.com/1331477/126075863-ee075afb-c4e1-423d-acc0-8174905378dd.png)
@@ -56,6 +61,18 @@ Old target formats are automatically converted.
 </target>
 ```
 
+#### Multiple fixes and improvement in LemMinX based editor
+
+With upgrade to newer LemMinX-Maven, the edition of pom.xml with the Generic Editor receives several comfortable fixes and improvements.
+
+#### One way synchronization for jpms directives from maven compiler arguments to .classpath file
+
+Extract jpms arguments (--add-exports,--add-opens,--add-reads,--patch-module) from the maven-compiler-plugin compiler arguments if any.
+Dispatch the arguments in the right container (if the target module is part of JRE then in JreContainer else in M2eContainer) and
+transform them into eclipse classpath attributes (add-exports, add-opens, add-reads, patch-module)
+
+### Older releases
+
 ## 1.18.1
 
 * 📅 Release Date: June 23rd, 2021
@@ -65,8 +82,6 @@ Main changes:
 * Use newer guava 30.1
 * Code cleanups
 * Improve project structure, documentation and other files to ease contributions
-
-### Older releases
 
 ## 1.18.0
 
